--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="row gx-4 justify-content-center">
                 <div class="col-lg-9">
                     <div class="bang p-4">
-                        <img src="img/gensuppnew.webp" alt="WebMD Logo" width="300" height="300">
+                        <img src="img/gensuppnew.webp" alt="Nurse and Doctor working together" width="300" height="300">
                     </div>
                     <h2 class="mt-3">General Support</h2>
                     <p class="lead"> It is important to understand the severity of your issue before attempting to solve
@@ -86,7 +86,7 @@
             <div class="row gx-4 justify-content-center">
                 <div class="col-lg-9">
                     <div class="bang p-4">
-                        <img src="img/waitnew.webp" alt="WebMD Logo" width="300" height="300">
+                        <img src="img/waitnew.webp" alt="Patient sitting and waiting impatiently" width="300" height="300">
                     </div>
                     <h2 class="mt-3">How long should you expect to wait? </h2>
                     <p class="lead">No one likes to wait. Its boring. To get a better idea of how long the average
